<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/layout_background"
	android:layoutDirection="ltr"
	android:textDirection="ltr"
	tools:context=".MainActivity">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="?actionBarSize"
		android:background="@color/colorPrimary">

		<TextView
			android:id="@+id/from"
			android:layout_width="@dimen/_120dp"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/text"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:textStyle="bold" />

		<ImageButton
			android:id="@+id/changeState"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_toStartOf="@id/to"
			android:layout_toEndOf="@id/from"
			android:background="@android:color/transparent"
			android:contentDescription="@string/change_content_description"
			android:src="@drawable/ic_change" />

		<TextView
			android:id="@+id/to"
			android:layout_width="@dimen/_120dp"
			android:layout_height="match_parent"
			android:layout_alignParentEnd="true"
			android:gravity="center"
			android:text="@string/morse"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:textStyle="bold" />
	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/header"
		android:orientation="vertical">

		<EditText
			android:id="@+id/input"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginStart="@dimen/_8dp"
			android:layout_marginTop="@dimen/_8dp"
			android:layout_marginEnd="@dimen/_8dp"
			android:layout_marginBottom="@dimen/_8dp"
			android:layout_weight="1"
			android:background="@drawable/input_border"
			android:gravity="top"
			android:hint="@string/text_hint"
			android:importantForAutofill="no"
			android:inputType="textMultiLine"
			android:padding="@dimen/_4dp"
			android:textColor="@color/black"
			android:textSize="@dimen/_14sp" />

		<RelativeLayout
			android:id="@+id/output_panel"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginStart="@dimen/_8dp"
			android:layout_marginEnd="@dimen/_8dp"
			android:layout_marginBottom="@dimen/_8dp"
			android:layout_weight="1"
			android:background="@drawable/output_border"
			android:visibility="gone">

			<TextView
				android:id="@+id/output"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_above="@id/copy"
				android:minHeight="@dimen/_28dp"
				android:padding="@dimen/_4dp"
				android:textColor="@color/white"
				android:textSize="@dimen/_14sp" />

			<ImageButton
				android:id="@+id/copy"
				android:layout_width="@dimen/_48dp"
				android:layout_height="@dimen/_48dp"
				android:layout_alignParentEnd="true"
				android:layout_alignParentBottom="true"
				android:layout_marginStart="@dimen/_8dp"
				android:layout_marginTop="@dimen/_4dp"
				android:layout_marginEnd="@dimen/_8dp"
				android:layout_marginBottom="@dimen/_4dp"
				android:background="@android:color/transparent"
				android:contentDescription="@string/copy_content_description"
				android:src="@drawable/ic_copy" />

		</RelativeLayout>
	</LinearLayout>
</RelativeLayout>